tests/good/test020.tig
let
  type intArray = array of int
  var arr := intArray[1] of 0
in
  arr[((((((((((((((((((((((0))))))))))))))))))))))]
end
